deployments/scheduler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      name: scheduler
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: ghcr.io/buckbrady/evetools/scheduler:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
      restartPolicy: Always
