deployments/scheduler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
spec:
  selector:
    app: scheduler
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
  type: ClusterIP
