deployments/scheduler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scheduler
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: scheduler.evebot.tools
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scheduler
                port:
                  number: 3333
  tls:
    - hosts:
      - scheduler.evebot.tools
      secretName: scheduler-tls
